# grader

./: CMakeLists.txt  build_grader.sh  temp
include/: standard.h  student.h
src/: main.cpp  standard.cpp  student.cpp  test.cpp
